10-rete-e-web/05-load-balancer/envoy.yaml
# Envoy come bilanciatore primario (API v3, Envoy >= 1.18)
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: service_haproxy }
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: service_haproxy
      connect_timeout: 0.25s
      type: LOGICAL_DNS                 # risolve il nome "haproxy" tramite il DNS interno di Docker
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_haproxy
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: haproxy, port_value: 80 }

# pannello di amministrazione: http://localhost:9901
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
